Fix figcaption colour contrast

--- a/_sass/components/_images.scss
+++ b/_sass/components/_images.scss
@@ -29,7 +29,7 @@ figure {
         padding: $container-padding;
         max-width: 600px;
         width: auto;
-        @include glass(20px, 2, true);
+        @include glass(20px, 2, true, --translucent-background);
 
         @include typography($smaller, "default");
 
